Never use direct path in Web UI, because media URL for search engines should never change.